# todolist

./: .gitignore  build-win.ps1  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
