[package]
name = "focuslog"
version = "0.1.2"
edition = "2021"

[lib]
name = "focuslog_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = { version = "2" }
tauri-plugin-fs = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
